@@ -1,4 +1,4 @@
-Description: 
+Summary: 
 Default: none
 Example: ZorroIII
 Since: 2.5.15
