@@ -9,6 +9,8 @@ Code:
         value = "2.04"
     elif t == "37.350":
         value = "2.05"
+    elif t == "39.106":
+        value = "3.0"
     elif t == "40.60":
         value = "3.1"
     elif t == "40.68":
