@@ -1,3 +1,5 @@
 Description: Show window border and decorations
-Default:
 Type: boolean
+Default:
+Example: 0
+Since: 2.5.33
