@@ -9,6 +9,7 @@ enum {
     CONFIG_CD32,
     CONFIG_CDTV,
     CONFIG_A1200,
+    CONFIG_A1200_3_0,
     CONFIG_A1200_020,
     CONFIG_SUPER,
     CONFIG_A4000,
