@@ -1,5 +1,7 @@
 Version 2.5.33dev:
 
+* New amiga model "A1200/3.0".
+* Added option new motherboard_ram.
 * New boolean option window_border to disable window decorations.
 * If STEAM_RUNTIME is set, look for "steamos" plugins, not "linux" plugins.
 * Plugin search path updated (also changed plugin format slightly).
